[package]
name = "filesystem"
version = "0.1.0"
edition = "2021" # Corrected to 2021 as 2024 is not a valid edition yet.

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde-big-array = "0.5.1" # Corrected name
